Pomijanie aktualizacji II :joy:

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@ Network Trash Folder
 Temporary Items
 .apdisk
 Testy.v12.suo
+Testy/bin/Debug/Testy.exe
+Testy/obj/Debug/Testy.csproj.GenerateResource.Cache
+Testy/obj/Debug/Testy.csproj.GenerateResource.Cache
